--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,15 @@
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.1.2",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "decimal.js": "^10.6.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1",
-    "prisma": "^5.22.0"
+    "prisma": "^5.22.0",
+    "zod": "^4.1.13"
   }
 }
