--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,64 @@
-# Dependencies
+# ══════════════════════════════════════════════════════════════
+# DEPENDENCIES
+# ══════════════════════════════════════════════════════════════
 node_modules/
+.pnp
+.pnp.js
 
-# Production
+# ══════════════════════════════════════════════════════════════
+# BUILD OUTPUT
+# ══════════════════════════════════════════════════════════════
 dist/
 build/
+.next/
+out/
 
-# Environment Variables
+# ══════════════════════════════════════════════════════════════
+# ENVIRONMENT & SECRETS
+# ══════════════════════════════════════════════════════════════
 .env
 .env.local
 .env.*.local
+!.env.example
 
-# Database
-*.sqlite
-*.sqlite-journal
-server/prisma/dev.db
-server/prisma/dev.db-journal
+# ══════════════════════════════════════════════════════════════
+# DATABASE
+# ══════════════════════════════════════════════════════════════
+*.db
+*.db-journal
+server/prisma/*.db
+server/prisma/*.db-journal
 
-# Logs
+# ══════════════════════════════════════════════════════════════
+# LOGS & DEBUG
+# ══════════════════════════════════════════════════════════════
+logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# OS
+# ══════════════════════════════════════════════════════════════
+# IDE & EDITOR
+# ══════════════════════════════════════════════════════════════
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
 .DS_Store
 Thumbs.db
 
-# IDE
-.vscode/
-.idea/
-.cursor/
+# ══════════════════════════════════════════════════════════════
+# TESTING
+# ══════════════════════════════════════════════════════════════
+coverage/
+.nyc_output/
+
+# ══════════════════════════════════════════════════════════════
+# MISC
+# ══════════════════════════════════════════════════════════════
+.cache/
+.temp/
+*.tgz
+.eslintcache
