--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,33 +1,18 @@
-# Build stage
-FROM node:18-alpine AS build
+FROM node:20-alpine AS build
 
 WORKDIR /app
 
-# Install dependencies
 COPY package*.json ./
 RUN npm ci
 
-# Copy source and build
 COPY . .
-ARG VITE_API_URL=http://localhost:3000/api
-ENV VITE_API_URL=$VITE_API_URL
 RUN npm run build
 
-# Production stage with nginx
+# Nginx Stage
 FROM nginx:alpine
 
-# Copy built files
 COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copy nginx config for SPA routing
-RUN echo 'server { \
-    listen 80; \
-    location / { \
-        root /usr/share/nginx/html; \
-        index index.html; \
-        try_files $uri $uri/ /index.html; \
-    } \
-}' > /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
