--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,22 +1,16 @@
-FROM node:18-alpine
+FROM node:20-alpine
 
 WORKDIR /app
 
-# Install dependencies
 COPY package*.json ./
 RUN npm ci --only=production
 
-# Copy source
+COPY prisma ./prisma/
 COPY . .
 
-# Generate Prisma client
+# Generate Prisma Client for Linux (Postgres)
 RUN npx prisma generate
 
-# Create data directory for SQLite
-RUN mkdir -p /app/data
-
-# Expose port
 EXPOSE 3000
 
-# Start server
-CMD ["node", "index.js"]
+CMD ["npm", "start"]
