--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,17 +2,17 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY client/package*.json ./
 RUN npm ci
 
-COPY . .
+COPY client/ .
 RUN npm run build
 
 # Nginx Stage
 FROM nginx:alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY client/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
