--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,5 +1,8 @@
 FROM node:20-alpine
 
+# Install OpenSSL for Prisma compatibility
+RUN apk add --no-cache openssl
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -8,9 +11,10 @@ RUN npm ci --only=production
 COPY prisma ./prisma/
 COPY . .
 
-# Generate Prisma Client for Linux (Postgres)
+# Generate Prisma Client for Linux
 RUN npx prisma generate
 
 EXPOSE 3000
 
 CMD ["npm", "start"]
+
