feat: add dashboard overview and financial goals pages

--- a/.env.example
+++ b/.env.example
@@ -1,30 +1,50 @@
 # ═══════════════════════════════════════════════════════════════
 # PERSONAL FINANCE APP - Environment Variables
 # ═══════════════════════════════════════════════════════════════
+# Copia este archivo a .env y completa los valores
 
-# Database (for local SQLite development)
+# ═══════════════════════════════════════════════════════════════
+# DESARROLLO LOCAL (SQLite)
+# ═══════════════════════════════════════════════════════════════
+
+# Base de datos SQLite (solo desarrollo)
 # DATABASE_URL="file:./dev.db"
 
-# Database (for production PostgreSQL)
-DATABASE_URL="postgresql://finanzas:CHANGE_ME@postgres:5432/finanzas"
+# ═══════════════════════════════════════════════════════════════
+# PRODUCCIÓN (PostgreSQL)
+# ═══════════════════════════════════════════════════════════════
+
+DATABASE_URL="postgresql://usuario:password@localhost:5432/finanzas"
 POSTGRES_DB=finanzas
 POSTGRES_USER=finanzas
-POSTGRES_PASSWORD=CHANGE_ME_SECURE_PASSWORD
+POSTGRES_PASSWORD=CAMBIA_ESTE_PASSWORD
 
-# JWT Secret (generate one: openssl rand -hex 32)
-JWT_SECRET=CHANGE_ME_GENERATE_A_LONG_RANDOM_STRING
+# ═══════════════════════════════════════════════════════════════
+# SEGURIDAD
+# ═══════════════════════════════════════════════════════════════
 
-# Production Domain (for Traefik)
+# Genera con: openssl rand -hex 32
+JWT_SECRET=GENERA_UNA_CLAVE_SECRETA_AQUI
+
+# ═══════════════════════════════════════════════════════════════
+# TRAEFIK / HTTPS (Producción en VPS)
+# ═══════════════════════════════════════════════════════════════
+
 DOMAIN=finanzas.tudominio.com
 ACME_EMAIL=tu@email.com
 
-# Push Notifications (VAPID Keys)
-VAPID_PUBLIC_KEY=BLoPBpUNLW3wbd5GrQbeqpPDyrDVCF0lN-0p-KfWiGwaRvbI6KOVcXGbDh7aCxlUbX9c1eJQPP-m0Ycr_-uJmFs
-VAPID_PRIVATE_KEY=Ztx0m7Jwa2JNV4p0J_qn2FHhyJiTocVYyj5TbxQvGvc
+# ═══════════════════════════════════════════════════════════════
+# PUSH NOTIFICATIONS (Opcional)
+# ═══════════════════════════════════════════════════════════════
 
-# Cron jobs
+# Genera claves VAPID con: npx web-push generate-vapid-keys
+VAPID_PUBLIC_KEY=GENERA_TU_CLAVE_PUBLICA
+VAPID_PRIVATE_KEY=GENERA_TU_CLAVE_PRIVADA
+
+# ═══════════════════════════════════════════════════════════════
+# CONFIGURACIÓN GENERAL
+# ═══════════════════════════════════════════════════════════════
+
 CRON_ENABLED=true
-
-# Node environment
 NODE_ENV=production
 PORT=3000
