--- a/deploy/.env.azure.example
+++ b/deploy/.env.azure.example
@@ -4,23 +4,23 @@
 # Copia este archivo a .env.azure y completa los valores
 # =====================================================
 
-# Recursos Azure (ya existentes)
+# Recursos Azure
 export AZURE_RESOURCE_GROUP="finanzas-app"
 export AZURE_LOCATION="eastus"
-export AZURE_REGISTRY_NAME="tufinanzasregistry"
+export AZURE_REGISTRY_NAME="tufinanzasregistry"  # Debe ser único globalmente
 
 # PostgreSQL
 export POSTGRES_SERVER_NAME="finanzas-postgres"
 export POSTGRES_ADMIN_USER="finanzas"
-export POSTGRES_ADMIN_PASSWORD="TuPasswordSegura123!"
+export POSTGRES_ADMIN_PASSWORD="CambiaEstePassword123!"  # Mín: 8 chars, mayúsculas, números, símbolos
 export POSTGRES_DB="finanzas"
 
 # Container Apps
 export CONTAINER_ENV_NAME="finanzas-env"
 
-# Secrets de la App
-export JWT_SECRET="genera-esto-con-openssl-rand-hex-32"
+# Secrets de la App (Genera con: openssl rand -hex 32)
+export JWT_SECRET="GENERA_TU_JWT_SECRET_AQUI"
 
-# Opcional: Push Notifications
+# Push Notifications (Opcional - Genera con: npx web-push generate-vapid-keys)
 export VAPID_PUBLIC_KEY=""
 export VAPID_PRIVATE_KEY=""
