--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "express-rate-limit": "^8.2.1",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
+    "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "prisma": "^5.22.0",
     "web-push": "^3.6.7",
