--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,8 @@
     "node-cron": "^4.2.1",
     "prisma": "^5.22.0",
     "web-push": "^3.6.7",
+    "winston": "^3.19.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "zod": "^4.1.13"
   }
 }
