feat: Implement core personal finance features including authentication, transaction management, and goal tracking with race condition fixes for goal payments.

--- a/server/.env.example
+++ b/server/.env.example
@@ -7,8 +7,11 @@
 # ─────────────────────────────────────────────────────────────
 # DATABASE
 # ─────────────────────────────────────────────────────────────
-# SQLite database file location (relative to server folder)
+# SQLite (development)
 DATABASE_URL="file:./dev.db"
+
+# PostgreSQL (production) - uncomment for production
+# DATABASE_URL="postgresql://user:password@host:5432/dbname?schema=public"
 
 # ─────────────────────────────────────────────────────────────
 # AUTHENTICATION
@@ -26,11 +29,32 @@ NODE_ENV="development"
 # Server port
 PORT=3000
 
-# Frontend URL (for CORS)
-FRONTEND_URL="http://localhost:5173"
+# ─────────────────────────────────────────────────────────────
+# CORS (NEW - Required for production)
+# ─────────────────────────────────────────────────────────────
+# Comma-separated list of allowed origins
+# Development defaults are used if not set
+CORS_ALLOWED_ORIGINS="http://localhost:5173,http://localhost:4173,http://localhost"
+
+# Production example:
+# CORS_ALLOWED_ORIGINS="https://your-domain.com,https://www.your-domain.com"
+
+# ─────────────────────────────────────────────────────────────
+# SCALING / CLUSTERING
+# ─────────────────────────────────────────────────────────────
+# Instance ID for cron job deduplication in scaled environments
+# Set to "1" for primary instance, other values for replicas
+INSTANCE_ID="1"
 
 # ─────────────────────────────────────────────────────────────
 # FEATURES
 # ─────────────────────────────────────────────────────────────
 # Enable automatic BCV rate fetching cron job
-CRON_ENABLED=true
+# Only runs on primary instance (INSTANCE_ID=1)
+CRON_ENABLED="true"
+
+# ─────────────────────────────────────────────────────────────
+# LOGGING (Optional)
+# ─────────────────────────────────────────────────────────────
+# Log level: error | warn | info | debug
+LOG_LEVEL="info"
