--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -53,6 +53,8 @@ services:
       VAPID_PUBLIC_KEY: ${VAPID_PUBLIC_KEY}
       VAPID_PRIVATE_KEY: ${VAPID_PRIVATE_KEY}
       CRON_ENABLED: "true"
+      INSTANCE_ID: "1"
+      CORS_ALLOWED_ORIGINS: "https://${DOMAIN},https://www.${DOMAIN}"
       PORT: 3000
     depends_on:
       postgres:
