--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cheerio": "^1.1.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "decimal.js": "^10.6.0",
