feat: add Azure Container Apps deployment script and configuration file for personal finance app.

--- a/deploy/.env.azure
+++ b/deploy/.env.azure
@@ -9,7 +9,15 @@ export AZURE_RESOURCE_GROUP="finanzas-app"
 export AZURE_LOCATION="eastus"
 export AZURE_REGISTRY_NAME="tufinanzasregistry"
 
-# PostgreSQL
+# =====================================================
+# DATABASE - Supabase PostgreSQL
+# =====================================================
+# IMPORTANTE: Reemplaza [YOUR-PASSWORD] con tu password real
+export DATABASE_URL="postgresql://postgres.xajttnfufooozakuzklt:mierdito1A@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
+
+# =====================================================
+# PostgreSQL Azure (IGNORADO si DATABASE_URL está definido)
+# =====================================================
 export POSTGRES_SERVER_NAME="finanzas-postgres"
 export POSTGRES_ADMIN_USER="finanzas"
 export POSTGRES_ADMIN_PASSWORD="TuPasswordSegura123!"
@@ -19,7 +27,11 @@ export POSTGRES_DB="finanzas"
 export CONTAINER_ENV_NAME="finanzas-env"
 
 # Secrets de la App
+# Genera con: openssl rand -hex 32
 export JWT_SECRET="genera-esto-con-openssl-rand-hex-32"
+
+# Frontend URL para CORS (se autoconfigura después del deploy)
+export CORS_ALLOWED_ORIGINS=""
 
 # Opcional: Push Notifications
 export VAPID_PUBLIC_KEY=""
