security: remove .env.azure from tracking, add .env.example template

--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,11 @@ out/
 .env
 .env.local
 .env.*.local
+.env.azure
+deploy/.env*
+deploy/*.env*
 !.env.example
+!deploy/.env.example
 
 # ══════════════════════════════════════════════════════════════
 # DATABASE
