--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -5,30 +5,30 @@
 # =====================================================
 
 # Recursos Azure (ya existentes)
-export AZURE_RESOURCE_GROUP="finanzas-app"
+export AZURE_RESOURCE_GROUP="your-resource-group"
 export AZURE_LOCATION="eastus"
-export AZURE_REGISTRY_NAME="tufinanzasregistry"
+export AZURE_REGISTRY_NAME="your-registry-name"
 
 # =====================================================
-# DATABASE - Supabase PostgreSQL
+# DATABASE - Supabase PostgreSQL (o Azure)
 # =====================================================
-# IMPORTANTE: Reemplaza [YOUR-PASSWORD] con tu password real
-export DATABASE_URL="postgresql://postgres.xajttnfufooozakuzklt:mierdito1A@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
+# Para Supabase: postgresql://user:password@host:5432/database
+export DATABASE_URL="your-database-url-here"
 
 # =====================================================
 # PostgreSQL Azure (IGNORADO si DATABASE_URL está definido)
 # =====================================================
-export POSTGRES_SERVER_NAME="finanzas-postgres"
-export POSTGRES_ADMIN_USER="finanzas"
-export POSTGRES_ADMIN_PASSWORD="TuPasswordSegura123!"
-export POSTGRES_DB="finanzas"
+export POSTGRES_SERVER_NAME="your-postgres-server"
+export POSTGRES_ADMIN_USER="your-admin-user"
+export POSTGRES_ADMIN_PASSWORD="your-secure-password"
+export POSTGRES_DB="your-database"
 
 # Container Apps
-export CONTAINER_ENV_NAME="finanzas-env"
+export CONTAINER_ENV_NAME="your-container-env"
 
 # Secrets de la App
 # Genera con: openssl rand -hex 32
-export JWT_SECRET="genera-esto-con-openssl-rand-hex-32"
+export JWT_SECRET="generate-with-openssl-rand-hex-32"
 
 # Frontend URL para CORS (se autoconfigura después del deploy)
 export CORS_ALLOWED_ORIGINS=""
