--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,17 +2,17 @@ FROM node:20-alpine AS build
 
 WORKDIR /app
 
-COPY client/package*.json ./
+COPY lovable-ui/package*.json ./
 RUN npm ci
 
-COPY client/ .
+COPY lovable-ui/ .
 RUN npm run build
 
 # Nginx Stage
 FROM nginx:alpine
 
 COPY --from=build /app/dist /usr/share/nginx/html
-COPY client/nginx.conf /etc/nginx/conf.d/default.conf
+COPY lovable-ui/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
 
