--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,11 @@ COPY lovable-ui/package*.json ./
 RUN npm ci
 
 COPY lovable-ui/ .
+
+# Set production API URL - CRITICAL for login to work
+ARG VITE_API_URL=https://finanzas-backend.orangeflower-43ff1781.eastus.azurecontainerapps.io/api
+ENV VITE_API_URL=${VITE_API_URL}
+
 RUN npm run build
 
 # Nginx Stage
@@ -17,3 +22,4 @@ COPY lovable-ui/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
+
