feat: enhanced Login/Register with dual currency toggle and country selector
- Login: responsive split layout, language toggle, micro-animations
- Register: country selector, dual currency toggle, language selector
- Header: displays real user name from AuthContext, functional logout
- Settings: dual currency toggle for USD countries (VE, EC, US)
- Backend: dualCurrencyEnabled field, Ecuador (EC) country support
- Database: schema synced with Supabase via prisma db push
- Added .agent/PROJECT_GUIDELINES.md (gitignored) for AI workspace rules

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,8 @@ coverage/
 .temp/
 *.tgz
 .eslintcache
+
+# ══════════════════════════════════════════════════════════════
+# AI/AGENT GUIDELINES (Local Only)
+# ══════════════════════════════════════════════════════════════
+.agent/
