fix: update api.baseUrl to correct Render URL

--- a/remix-of-fincontrol-insights/src/config/app.config.json
+++ b/remix-of-fincontrol-insights/src/config/app.config.json
@@ -5,7 +5,7 @@
         "description": "Administrador de Finanzas Personales"
     },
     "api": {
-        "baseUrl": "https://finanzas-backend.onrender.com",
+        "baseUrl": "https://tu-gestor-backend.onrender.com",
         "timeout": 15000,
         "retryAttempts": 3
     },
